--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello"
+        "*"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -22,7 +22,7 @@
             },
             {
                 "command": "codeStory.signIn",
-                "title":"Sign In"
+                "title": "Sign In"
             },
             {
                 "command": "codeStory.signOut",
@@ -31,6 +31,10 @@
             {
                 "command": "codeStory.sync",
                 "title": "Sync"
+            },
+            {
+                "command": "codeStory.test.inputbox",
+                "title": "input box"
             }
         ]
     },
@@ -39,13 +43,18 @@
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "copy /y src/test/testFile/test node_modules/vscode/bin && npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.21",
-        "tslint": "^5.8.0",
+        "@types/mocha": "^2.2.42",
         "@types/node": "^8.10.25",
-        "@types/mocha": "^2.2.42"
+        "tslint": "^5.8.0",
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.21"
+    },
+    "dependencies": {
+        "inversify": "^5.0.1",
+        "reflect-metadata": "^0.1.12",
+        "typemoq": "^2.1.0"
     }
 }
