--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,14 @@
         "lib": [
             "es6"
         ],
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "sourceMap": true,
         "rootDir": "src",
         /* Strict Type-Checking Option */
-        "strict": true,   /* enable all strict type-checking options */
+        // "strict": true,   /* enable all strict type-checking options */
         /* Additional Checks */
-        "noUnusedLocals": true /* Report errors on unused locals. */
+        "noUnusedLocals": false /* Report errors on unused locals. */
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
         // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
         // "noUnusedParameters": true,  /* Report errors on unused parameters. */
