--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
                 "title": "Sync"
             },
             {
-                "command": "codeStory.test.inputbox",
-                "title": "input box"
+                "command": "codeStory.showReport",
+                "title": "Show Report"
             }
         ]
     },
