--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
             {
                 "command": "codeStory.showReport",
                 "title": "Show Report"
+            },
+            {
+                "command": "codeStory.controlButton",
+                "title": "contorl Buttion"
             }
         ]
     },
@@ -53,8 +57,10 @@
         "vscode": "^1.1.21"
     },
     "dependencies": {
+        "@types/sqlite3": "^3.1.3",
         "inversify": "^5.0.1",
         "reflect-metadata": "^0.1.12",
+        "sqlite3": "^4.0.4",
         "typemoq": "^2.1.0"
     }
 }
