--- a/package.json
+++ b/package.json
@@ -2,8 +2,20 @@
     "name": "code-story",
     "displayName": "code story",
     "description": "show statistic about your coding",
-    "version": "0.0.1",
+    "version": "0.9.0",
     "publisher": "BigMiao",
+    "icon": "icons/cat.png",
+    "repository": {
+        "url": "https://github.com/LittleLittleCloud/code-story.git"
+    },
+    "bugs": {
+        "url": "https://github.com/LittleLittleCloud/code-story.git/issues",
+        "email": "bigmiao.zhang@gmail.com"
+    },
+    "author": {
+        "name": "BigMiao",
+        "email": "bigmiao.zhang@gmail.com"
+    },
     "engines": {
         "vscode": "^1.28.0"
     },
@@ -17,28 +29,52 @@
     "contributes": {
         "commands": [
             {
-                "command": "extension.sayHello",
-                "title": "Hello World"
-            },
-            {
                 "command": "codeStory.signIn",
-                "title": "Sign In"
+                "title": "Sign In",
+                "category": "code-story"
             },
             {
                 "command": "codeStory.signOut",
-                "title": "Sign out"
+                "title": "Sign out",
+                "category": "code-story"
+            },
+            {
+                "command": "codeStory.upload",
+                "title": "Upload",
+                "category": "code-story"
+            },
+            {
+                "command": "codeStory.download",
+                "title": "Download",
+                "category": "code-story"
             },
             {
                 "command": "codeStory.sync",
-                "title": "Sync"
+                "title": "Sync",
+                "category": "code-story"
             },
             {
                 "command": "codeStory.showReport",
-                "title": "Show Report"
+                "title": "Show Report",
+                "category": "code-story"
             },
             {
                 "command": "codeStory.controlButton",
-                "title": "contorl Buttion"
+                "title": "contorl Buttion",
+                "category": "code-story"
+            }
+        ],
+        "configuration":[
+            {
+                "title": "code-story configuration",
+                "properties": {
+                    "codeStory.syncPlatform":{
+                        "type":"string",
+                        "default":"GoogleDrive",
+                        "description": "choose which platform you want to keep your record (currently available: GoogleDrive)", 
+                        "enum": ["GoogleDrive"]
+                    }
+                }
             }
         ]
     },
@@ -47,7 +83,8 @@
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "copy /y src/test/testFile/test node_modules/vscode/bin && npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "copy /y src/test/testFile/test node_modules/vscode/bin && npm run compile && node ./node_modules/vscode/bin/test",
+        "yield": "vsce package --yarn"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.42",
@@ -58,6 +95,7 @@
     },
     "dependencies": {
         "@types/sqlite3": "^3.1.3",
+        "googleapis": "^35.0.0",
         "inversify": "^5.0.1",
         "reflect-metadata": "^0.1.12",
         "sqlite3": "^4.0.4",
