--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
             },
             {
                 "command": "codeStory.download",
-                "title": "Download",
+                "title": "Download and Merge record",
                 "category": "code-story"
             },
             {
