--- a/package.json
+++ b/package.json
@@ -54,15 +54,22 @@
                 "category": "code-story"
             }
         ],
-        "configuration":[
+        "configuration": [
             {
                 "title": "code-story configuration",
                 "properties": {
-                    "codeStory.syncPlatform":{
-                        "type":"string",
-                        "default":"GoogleDrive",
-                        "description": "choose which platform you want to keep your record (currently available: GoogleDrive)", 
-                        "enum": ["GoogleDrive"]
+                    "codeStory.syncPlatform": {
+                        "type": "string",
+                        "default": "GoogleDrive",
+                        "description": "choose which platform you want to keep your record (currently available: GoogleDrive)",
+                        "enum": [
+                            "GoogleDrive"
+                        ]
+                    },
+                    "codeStory.startPort": {
+                        "type": "integer",
+                        "default": "23333",
+                        "description": "choose the port number where server run"
                     }
                 }
             }
@@ -84,9 +91,12 @@
         "vscode": "^1.1.21"
     },
     "dependencies": {
+        "@types/express": "^4.16.0",
         "@types/sqlite3": "^3.1.3",
+        "express": "^4.16.4",
         "googleapis": "^35.0.0",
         "inversify": "^5.0.1",
+        "portfinder": "^1.0.20",
         "reflect-metadata": "^0.1.12",
         "sqlite3": "^4.0.4",
         "typemoq": "^2.1.0"
