--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
         "@types/express": "^4.16.0",
         "@types/sqlite3": "^3.1.3",
         "express": "^4.16.4",
+        "express-generator": "^4.16.0",
         "googleapis": "^35.0.0",
         "inversify": "^5.0.1",
         "portfinder": "^1.0.20",
