--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
         "test": "copy /y src/test/testFile/test node_modules/vscode/bin && npm run compile && node ./node_modules/vscode/bin/test",
         "yield": "vsce package --yarn"
     },
+    "resolutions": {
+        "**/event-stream": "^4.0.1"
+    },
     "devDependencies": {
         "@types/mocha": "^2.2.42",
         "@types/node": "^8.10.25",
@@ -105,6 +108,7 @@
         "portfinder": "^1.0.20",
         "reflect-metadata": "^0.1.12",
         "sqlite3": "^4.0.4",
-        "typemoq": "^2.1.0"
+        "typemoq": "^2.1.0",
+        "vsce": "^1.65.0"
     }
 }
